syntax = "proto3";

import "google/protobuf/timestamp.proto";

package contract.v1;

message Transfers {
    repeated Transfer transfers = 1;
}

message Transfer {
    string evt_tx_hash = 1;
    uint32 evt_index = 2;
    google.protobuf.Timestamp evt_block_time = 3;
    uint64 evt_block_number = 4;
    string from = 5;
    string to = 6;
    string value = 7;
    string from_balance = 8;
    string to_balance = 9;
}
